add VAE and scheduler options
